# stata-mcp

./: .gitignore  CITATION.cff  License  README.md  Statement.md  example.config.py  pyproject.toml  stata_mcp.py  usable.py
docs/: Advanced.md  Difference.md  Questions.md  Usage.md  usage.md
docs/README/cn/: README.md
docs/README/fr/: README.md
docs/README/sp/: README.md
docs/Stata17/: append.txt  egen.txt  regress.txt  save.txt  summarize.txt
docs/Stata17/D/: egen.txt  merge.txt
docs/Stata17/XT/: xtreg.txt
docs/StataDocs/D/: by.txt  drop.txt  encode.txt  generate.txt  label.txt  use.txt
docs/StataDocs/XT/: xtset.txt
docs/Usages/: Questions.md  Usage.md  Usage_Windows.md
source/docs/README/cn/: README.md
source/docs/README/fr/: README.md
source/docs/README/sp/: README.md
src/data/: did_show.dta
src/example/data/: 01_OLS.dta  02_Tax_Reform_std_DID.dta  03_Tax_SDID.dta  05_Education_Returns_IV.dta
utils/: StataCommandGenerator.py  StataFinder.py
utils/Prompt/: __init__.py  prompts.py
