[project]
name = "stata-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "mcp[cli]>=1.9.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[project.scripts]
stata_mcp = "stata_mcp:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["stata_mcp", "gen_stata_code_MCP", "usable"]
packages = ["utils"]
